@@ -1,6 +1,7 @@
 2008.06.14
 
 * Removed extraneous while space.
+* Added NoSuchFunction class.
 
 2008.06.11
 
